Bug 1506512 - ServerTiming header must be updated onStopRequest as well. r=valentin a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D12026